# llm-scry

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/llm_scry/: config.py  engine.py  main.py  schemas.py  sessions.py
backend/src/llm_scry/api/: generate.py  model.py  session.py
backend/tests/: test_api.py  test_sessions.py
docs/: design.md
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
