[project]
name = "llm-scry"
version = "0.1.0"
description = "Local transformer interpretability visualizer"
readme = "README.md"
authors = [
    { name = "DennisKoshta", email = "denniskoshta@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "sse-starlette>=3.3.4",
    "torch>=2.6.0",
    "transformer-lens>=3.0.0",
    "uvicorn[standard]>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
